[project]
name = "lunarsensor"
version = "2.0.0"
description = "Custom Ambient Light Sensor server for the Lunar macOS app"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alin Panaitiu", email = "alin.panaitiu@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "fastapi>=0.115",
    "sse-starlette>=2.1",
    "uvicorn>=0.30",
    "zeroconf>=0.132",
]

[project.urls]
Homepage = "https://lunar.fyi"
Repository = "https://github.com/alin23/lunarsensor"

[project.scripts]
lunarsensor = "lunarsensor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["lunarsensor.py"]
